--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,10 +1,12 @@
 #  The contact options.
 
+- type: instagram
+  icon: "fab fa-instagram"
+  url: "https://www.instagram.com/dizasazkia/"
+
 - type: github
   icon: "fab fa-github"
-
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+  url: "https://github.com/dizasazkia"
 
 - type: email
   icon: "fas fa-envelope"
